# Dshell

./: Makefile  README.md  install-gentoo.py  setup.cfg  setup.py  setup.py_wip  tox.ini.wip
