[metadata]
name = setup.cfg
version = 001
author = USArmyResearchLab
author-email = Dshell is a network forensic analysis framework. 
summary = Reads a distributions's metadata from its setup.cfg file and passes it to setuptools.setup()
description-file =
    README.md
 
home-page = https://github.com/USArmyResearchLab/Dshell
requires-dist = setuptools pkgutil Crypto dpkt IPy pcap
classifier = 
    Development Status :: 5 - Production/Stable
	Environment :: Plugins
	Framework :: Setuptools Plugin
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 2
	Topic :: Software Development :: Build Tools
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: System :: Archiving :: Packaging

[files]
packages =
    setup
    setup.cfg
    etup.cfg.externs
extra_files =
    LICENSE.txt
    README.md

[backwards_compat]
zip-safe = False
tests-require = nose

[entry_points]
distutils.setup_keywords = 
	setup_cfg = setup.cfg.core:setup_cfg
zest.releaser.prereleaser.middle = 
	d2_version = setup.cfg.zestreleaser:prereleaser_middle
zest.releaser.postreleaser.middle = 
	d2_version = setup.cfg.zestreleaser:postreleaser_middle

[test]
test-suite = nose.collector

[zest.releaser]
# These zest.releaser hooks are not installed as entry points as they are only
# used for setup.cfg itself--the ones that are installed as entry points are
# useful to any project that uses setup.cfg
releaser.middle = setup.cfg.zestreleaser.releaser_middle
postreleaser.before = setup.cfg.zestreleaser.postreleaser_before
[build_ext]
inplace=1  
[bdist_rpm]
release = 1
packager = Greg Ward <gward@python.net>
doc_files = CHANGES.txt
            README.txt
            USAGE.txt
            doc/
            examples/
[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0
